--- a/index.html
+++ b/index.html
@@ -94,9 +94,15 @@
                     </li>
                   </ul>
                   <ul class="list-share-2">
-                    <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                    <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"></a></li>
+                    <li><a class="icon mdi" href="#"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"  viewBox="-10 -10 50 50">
+                      <path d="M 19.253906 2 C 15.311906 2 13 4.0821719 13 8.8261719 L 13 13 L 8 13 L 8 18 L 13 18 L 13 30 L 18 30 L 18 18 L 22 18 L 23 13 L 18 13 L 18 9.671875 C 18 7.884875 18.582766 7 20.259766 7 L 23 7 L 23 2.2050781 C 22.526 2.1410781 21.144906 2 19.253906 2 z"></path>
+                      </svg></a></li>
+                    <li><a class="icon mdi" href="#"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="-10 -10 50 50">
+                      <path d="M 4.0175781 4 L 13.091797 17.609375 L 4.3359375 28 L 6.9511719 28 L 14.246094 19.34375 L 20.017578 28 L 20.552734 28 L 28.015625 28 L 18.712891 14.042969 L 27.175781 4 L 24.560547 4 L 17.558594 12.310547 L 12.017578 4 L 4.0175781 4 z M 7.7558594 6 L 10.947266 6 L 24.279297 26 L 21.087891 26 L 7.7558594 6 z"></path>
+                      </svg></a></li>                    
+                    <li><a class="icon mdi" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="-3 -3 38 38">
+                      <path d="M 11.46875 5 C 7.917969 5 5 7.914063 5 11.46875 L 5 20.53125 C 5 24.082031 7.914063 27 11.46875 27 L 20.53125 27 C 24.082031 27 27 24.085938 27 20.53125 L 27 11.46875 C 27 7.917969 24.085938 5 20.53125 5 Z M 11.46875 7 L 20.53125 7 C 23.003906 7 25 8.996094 25 11.46875 L 25 20.53125 C 25 23.003906 23.003906 25 20.53125 25 L 11.46875 25 C 8.996094 25 7 23.003906 7 20.53125 L 7 11.46875 C 7 8.996094 8.996094 7 11.46875 7 Z M 21.90625 9.1875 C 21.402344 9.1875 21 9.589844 21 10.09375 C 21 10.597656 21.402344 11 21.90625 11 C 22.410156 11 22.8125 10.597656 22.8125 10.09375 C 22.8125 9.589844 22.410156 9.1875 21.90625 9.1875 Z M 16 10 C 12.699219 10 10 12.699219 10 16 C 10 19.300781 12.699219 22 16 22 C 19.300781 22 22 19.300781 22 16 C 22 12.699219 19.300781 10 16 10 Z M 16 12 C 18.222656 12 20 13.777344 20 16 C 20 18.222656 18.222656 20 16 20 C 13.777344 20 12 18.222656 12 16 C 12 13.777344 13.777344 12 16 12 Z"></path>
+                      </svg></a></li>
                     
                   </ul>
                   <a href="quote.html">
@@ -224,9 +230,7 @@
                 <div class="col-sm-9 col-md-8 col-lg-7 col-xl-7 offset-lg-1 offset-xxl-0">
                   <h1 class="oh swiper-title"><span class="d-inline-block" data-caption-animate="slideInUp"
                       data-caption-delay="0">Zifra Creations</span></h1>
-                  <p class="big swiper-text" data-caption-animate="fadeInLeft" data-caption-delay="300">Discover the
-                    epitome of style and sophistication with Zifra Creations. Elevate your wardrobe with our premium
-                    unisex apparel designed for the modern gentleman!</p>
+                  <p class="big swiper-text" data-caption-animate="fadeInLeft" data-caption-delay="300">Discover the epitome of style and sophistication with Zifra Creations! Elevate your wardrobe with our premium unisex apparel, designed for everyone who values fashion, comfort, and confidence. Embrace your unique style with outfits that redefine elegance for all!</p>
                 </div>
               </div>
             </div>
@@ -239,11 +243,9 @@
                 <div class="col-sm-8 col-lg-7 offset-lg-1 offset-xxl-0">
                   <h1 class="oh swiper-title"><span class="d-inline-block" data-caption-animate="slideInDown"
                       data-caption-delay="0">Premium Quality</span></h1>
-                  <p class="big swiper-text" data-caption-animate="fadeInRight" data-caption-delay="300">Experience the
-                    unmatched quality of Zifra Creations’s menswear. Crafted with the finest fabrics and meticulous
-                    attention to detail for a perfect fit and enduring style.</p>
+                  <p class="big swiper-text" data-caption-animate="fadeInRight" data-caption-delay="300">Experience the unmatched quality of Zifra Creations’ apparel. Crafted with the finest fabrics and meticulous attention to detail, our premium unisex collection offers the perfect fit and enduring style for everyone. Elevate your fashion with timeless elegance!</p>
                   <div class="button-wrap oh"><a class="button button-lg button-primary button-winona button-shadow-2"
-                      href="#" data-caption-animate="slideInUp" data-caption-delay="0">Explore Our Collection</a></div>
+                      href="/products.html" data-caption-animate="slideInUp" data-caption-delay="0">Explore Our Collection</a></div>
                 </div>
               </div>
             </div>
@@ -279,7 +281,7 @@
                 <div class="services-terri-figure"><img src="images/Collection/causalShirt.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">collared T-shirt</a></h5>
+                  <h5 class="services-terri-title"><a href="#">collared T-shirts</a></h5>
                 </div>
               </article>
             </div>
@@ -291,7 +293,7 @@
                 <div class="services-terri-figure"><img src="images/Collection/formalWear.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">Custom T-shirt</a></h5>
+                  <h5 class="services-terri-title"><a href="#">Customized T-shirts</a></h5>
                 </div>
               </article>
             </div>
@@ -478,21 +480,21 @@
               <div class="quote-tara-figure"><img src="images/user-6-115x115.jpg" alt="" width="115" height="115" />
               </div>
             </div>
-            <h6 class="quote-tara-author">Alex Johnson</h6>
+            <h6 class="quote-tara-author">Jessica</h6>
             <div class="quote-tara-status">Client</div>
           </article>
           <!-- Quote Tara-->
           <article class="quote-tara">
             <div class="quote-tara-caption">
               <div class="quote-tara-text">
-                <p class="q">I love shopping at Zifra Creations. The unisex wear is top-notch, and the customer service
+                <p class="q">I love shopping at Zifra Creations. The T-shirts are good and breathable and the customer service
                   is always excellent.</p>
               </div>
               <div class="quote-tara-figure"><img src="images/user-8-115x115.jpg" alt="" width="115" height="115" />
               </div>
             </div>
-            <h6 class="quote-tara-author">Michael Smith</h6>
-            <div class="quote-tara-status">Client</div>
+            <h6 class="quote-tara-author">Taj Sports</h6>
+            <div class="quote-tara-status">Dealer</div>
           </article>
           <!-- Quote Tara-->
           <article class="quote-tara">
@@ -504,21 +506,20 @@
               <div class="quote-tara-figure"><img src="images/user-7-115x115.jpg" alt="" width="115" height="115" />
               </div>
             </div>
-            <h6 class="quote-tara-author">Jessica Lee</h6>
-            <div class="quote-tara-status">Client</div>
+            <h6 class="quote-tara-author">Alex </h6>
+            <div class="quote-tara-status">customer</div>
           </article>
           <!-- Quote Tara-->
           <article class="quote-tara">
             <div class="quote-tara-caption">
               <div class="quote-tara-text">
-                <p class="q">Every time I shop at Zifra Creations, I find exactly what I need. Their range is
-                  fantastic and always on trend.</p>
+                <p class="q">We got Our Company Custom T-shirt From Zifra Creations,It's Excellent Our Team Like The Material.</p>
               </div>
               <div class="quote-tara-figure"><img src="images/user-9-115x115.jpg" alt="" width="115" height="115" />
               </div>
             </div>
-            <h6 class="quote-tara-author">Daniel Brown</h6>
-            <div class="quote-tara-status">Client</div>
+            <h6 class="quote-tara-author">Cyberphoenix</h6>
+            <div class="quote-tara-status">Customer</div>
           </article>
         </div>
       </div>
@@ -575,8 +576,7 @@
             <div class="col-md-6 col-lg-4">
               <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Zifra Creations</span></h5>
               <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
-                <li><a href="#">Custom Pieces</a></li>
-                <li><a href="#">Limited Deals</a></li>
+<li><a href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey zifra creations, Please share more details about the Customized T-shirts" target="_blank">Custom Design</a></li>                <li><a href="#">Limited Deals</a></li>
                 <li><a href="/about-us.html">About Zifra</a></li>
               </ul>
             </div>
@@ -633,7 +633,7 @@
                 <div class="footer-modern-contacts wow slideInUp">
                   <div class="unit unit-spacing-sm align-items-center">
                     <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
-                    <div class="unit-body"><a class="phone" href="tel:+91 7200439935">+91 7200439935</a></div>
+                    <div class="unit-body"><a class="phone" href="tel:+917200439935">+91 7200439935</a></div>
                   </div>
                 </div>
                 <div class="footer-modern-contacts wow slideInDown">
@@ -645,8 +645,12 @@
                 <div class="wow slideInRight">
                   <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                    <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"></a></li>
+                    <li><a class="icon mdi" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-50,-50,350,350">
+                      <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M5.91992,6l14.66211,21.375l-14.35156,16.625h3.17969l12.57617,-14.57812l10,14.57813h12.01367l-15.31836,-22.33008l13.51758,-15.66992h-3.16992l-11.75391,13.61719l-9.3418,-13.61719zM9.7168,8h7.16406l23.32227,34h-7.16406z"></path></g></g>
+                      </svg></a></li>
+                    <li><a class="icon mdi" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"  viewBox="-50,-50,356,356">
+                      <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(9.84615,9.84615)"><path d="M7.54688,0c-4.15625,0 -7.54687,3.39063 -7.54687,7.54688v10.90625c0,4.15625 3.39063,7.54688 7.54688,7.54688h10.90625c4.15625,0 7.54688,-3.39062 7.54688,-7.54687v-10.90625c0,-4.15625 -3.39062,-7.54687 -7.54687,-7.54687zM7.54688,2h10.90625c3.07422,0 5.54688,2.46875 5.54688,5.54688v10.90625c0,3.07422 -2.46875,5.54688 -5.54687,5.54688h-10.90625c-3.07422,0 -5.54687,-2.46875 -5.54687,-5.54687v-10.90625c0,-3.07422 2.46875,-5.54687 5.54688,-5.54687zM20.5,4c-0.82812,0 -1.5,0.67188 -1.5,1.5c0,0.82813 0.67188,1.5 1.5,1.5c0.82813,0 1.5,-0.67187 1.5,-1.5c0,-0.82812 -0.67187,-1.5 -1.5,-1.5zM13,6c-3.85547,0 -7,3.14453 -7,7c0,3.85547 3.14453,7 7,7c3.85547,0 7,-3.14453 7,-7c0,-3.85547 -3.14453,-7 -7,-7zM13,8c2.77344,0 5,2.22656 5,5c0,2.77344 -2.22656,5 -5,5c-2.77344,0 -5,-2.22656 -5,-5c0,-2.77344 2.22656,-5 5,-5z"></path></g></g>
+                      </svg></a></li>
                     
                   </ul>
                 </div>
