--- a/about-us.html
+++ b/about-us.html
@@ -94,9 +94,15 @@
                     </li>
                   </ul>
                   <ul class="list-share-2">
-                    <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                    <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"></a></li>
+                    <li><a class="icon mdi" href="#"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"  viewBox="-10 -10 50 50">
+                      <path d="M 19.253906 2 C 15.311906 2 13 4.0821719 13 8.8261719 L 13 13 L 8 13 L 8 18 L 13 18 L 13 30 L 18 30 L 18 18 L 22 18 L 23 13 L 18 13 L 18 9.671875 C 18 7.884875 18.582766 7 20.259766 7 L 23 7 L 23 2.2050781 C 22.526 2.1410781 21.144906 2 19.253906 2 z"></path>
+                      </svg></a></li>
+                    <li><a class="icon mdi" href="#"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="-10 -10 50 50">
+                      <path d="M 4.0175781 4 L 13.091797 17.609375 L 4.3359375 28 L 6.9511719 28 L 14.246094 19.34375 L 20.017578 28 L 20.552734 28 L 28.015625 28 L 18.712891 14.042969 L 27.175781 4 L 24.560547 4 L 17.558594 12.310547 L 12.017578 4 L 4.0175781 4 z M 7.7558594 6 L 10.947266 6 L 24.279297 26 L 21.087891 26 L 7.7558594 6 z"></path>
+                      </svg></a></li>                    
+                    <li><a class="icon mdi" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="-3 -3 38 38">
+                      <path d="M 11.46875 5 C 7.917969 5 5 7.914063 5 11.46875 L 5 20.53125 C 5 24.082031 7.914063 27 11.46875 27 L 20.53125 27 C 24.082031 27 27 24.085938 27 20.53125 L 27 11.46875 C 27 7.917969 24.085938 5 20.53125 5 Z M 11.46875 7 L 20.53125 7 C 23.003906 7 25 8.996094 25 11.46875 L 25 20.53125 C 25 23.003906 23.003906 25 20.53125 25 L 11.46875 25 C 8.996094 25 7 23.003906 7 20.53125 L 7 11.46875 C 7 8.996094 8.996094 7 11.46875 7 Z M 21.90625 9.1875 C 21.402344 9.1875 21 9.589844 21 10.09375 C 21 10.597656 21.402344 11 21.90625 11 C 22.410156 11 22.8125 10.597656 22.8125 10.09375 C 22.8125 9.589844 22.410156 9.1875 21.90625 9.1875 Z M 16 10 C 12.699219 10 10 12.699219 10 16 C 10 19.300781 12.699219 22 16 22 C 19.300781 22 22 19.300781 22 16 C 22 12.699219 19.300781 10 16 10 Z M 16 12 C 18.222656 12 20 13.777344 20 16 C 20 18.222656 18.222656 20 16 20 C 13.777344 20 12 18.222656 12 16 C 12 13.777344 13.777344 12 16 12 Z"></path>
+                      </svg></a></li>
                     
                   </ul>
                   <a href="quote.html">
@@ -252,27 +258,18 @@
             <div class="tab-content tab-content-1">
               <div class="tab-pane fade show active" id="tabs-4-1">
                 <h4>A Few Words About Us</h4>
-                <p>Welcome to Zifra Creations, where style meets sophistication. For over a decade, we have been the
-                  premier destination for unisex fashion, offering a diverse range of high-quality clothing that blends
-                  tradition with contemporary design. From timeless classics to the latest trends, our collection is
-                  carefully curated to cater to the modern man who values both comfort and style.</p>
-                <p>At Zifra Creations, we believe that every man deserves to look his best, whether at work, at a
-                  social event, or in casual settings. Our commitment to quality and customer satisfaction is reflected
-                  in every piece we offer. Join us on our journey to redefine unisex fashion, one outfit at a time.</p>
+                <p>Welcome to Zifra Creations, where style meets sophistication. For over a decade, we have been the premier destination for unisex fashion, offering a diverse range of high-quality clothing that blends tradition with contemporary design. From timeless classics to the latest trends, our collection is thoughtfully curated for individuals who appreciate both comfort and style, no matter their identity.</p>
+                <p>At Zifra Creations, we believe that everyone deserves to look their best—whether at work, social events, or in casual settings. Our commitment to quality and customer satisfaction is reflected in every piece we offer. Join us on our journey to redefine unisex fashion, one outfit at a time.</p>
                 <img src="images/aboutsection.jpg" alt="Zifra Creations" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-2">
                 <h4>Our Mission</h4>
-                <p>Our mission is to empower men with stylish and comfortable clothing that boosts confidence and
-                  reflects their unique personality. We strive to provide a shopping experience that is as exceptional
-                  as our products, making Zifra Creations the go-to destination for unisex fashion.</p><img
+                <p>Our mission is to empower individuals with stylish and comfortable clothing that boosts confidence and reflects their unique personality. We strive to provide a shopping experience that is as exceptional as our products, making Zifra Creations the go-to destination for unisex fashion.</p><img
                   src="images/a2.png" alt="Our Mission" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-3">
                 <h4>Our Goals</h4>
-                <p>Our goal is to continuously innovate and expand our product line, offering our customers the latest
-                  in unisex fashion. We aim to become a leading name in the fashion industry, known for our dedication to
-                  quality, style, and customer satisfaction.</p><img src="images/a1.png" alt="Our Goals"
+                <p>Our goal is to continuously innovate and expand our product line, bringing you the latest in unisex fashion. We strive to become a leading name in the fashion industry, recognized for our dedication to quality, style, and customer satisfaction. At Zifra Creations, fashion is for everyone!</p><img src="images/a1.png" alt="Our Goals"
                   width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-4">
@@ -314,8 +311,7 @@
                 </div>
                 <div class="unit-body">
                   <h5 class="box-icon-classic-title"><a href="#">Variety of Styles</a></h5>
-                  <p class="box-icon-classic-text">From casual wear to formal attire, our collection covers all
-                    occasions, helping you dress your best every day.</p>
+                  <p class="box-icon-classic-text">From everyday essentials to statement pieces, Zifra Creations offers premium, stylish, and comfortable apparel for every occasion.</p>
                 </div>
               </div>
             </article>
@@ -459,7 +455,7 @@
             <div class="bg-image-right-1 bg-image-right-lg"><img src="images/abouthistory.jpg" alt="Our History"
                 width="1110" height="710" />
               <div class="link-play-modern"><a class="icon mdi mdi-play" data-lightgallery="item"
-                  href="https://youtu.be/ayJdhVmExTg?si=zLvZubyE3sL2qD_g"></a>
+                  href="https://youtu.be/fIqrFlGJdcg"></a>
                 <div class="link-play-modern-title">How we<span>Work</span></div>
                 <div class="link-play-modern-decor"></div>
               </div>
@@ -485,41 +481,34 @@
                   <div class="item">
                     <!-- Quote Modern-->
                     <article class="quote-modern">
-                      <h5 class="quote-modern-text"><span class="q">Torus accelerares, tanquam ferox cacula. Fluctuss
-                          experimentum in burdigala! Ubi est peritus classis? Peregrinatione superbe ducunt ad magnum
-                          verpa.</span></h5>
-                      <h5 class="quote-modern-author">Stephen Adams,</h5>
-                      <p class="quote-modern-status">Regular Client</p>
+                      <h5 class="quote-modern-text"><span class="q">I love shopping at Zifra Creations. The T-shirts are good and breathable and the customer service
+                        is always excellent.</span></h5>
+                      <h5 class="quote-modern-author">Taj Sports,</h5>
+                      <p class="quote-modern-status">Dealer</p>
                     </article>
                   </div>
                   <div class="item">
                     <!-- Quote Modern-->
                     <article class="quote-modern">
-                      <h5 class="quote-modern-text"><span class="q">Gluten, fluctus, et galatae. Germanus classiss
-                          ducunt ad brodium. Pol, a bene cedrium. Tabess unda in neuter avenio! Orexiss sunt adelphiss
-                          de rusticus parma.</span></h5>
-                      <h5 class="quote-modern-author">Sam Peterson,</h5>
-                      <p class="quote-modern-status">Regular Client</p>
+                      <h5 class="quote-modern-text"><span class="q">Zifra Creations delivers top-notch quality and style. The fit is perfect, and the comfort is unmatched. Highly recommend!</span></h5>
+                      <h5 class="quote-modern-author">Sam,</h5>
+                      <p class="quote-modern-status">Regular Customer</p>
                     </article>
                   </div>
                   <div class="item">
                     <!-- Quote Modern-->
                     <article class="quote-modern">
-                      <h5 class="quote-modern-text"><span class="q">Pol, silva! Grandis contencios ducunt ad torus.
-                          Monss congregabo in nobilis tectum! Velox, fatalis victrixs sapienter talem de emeritis,
-                          festus torus.</span></h5>
-                      <h5 class="quote-modern-author">Jane McMillan,</h5>
-                      <p class="quote-modern-status">Regular Client</p>
+                      <h5 class="quote-modern-text"><span class="q">We got Our Company Custom T-shirt From Zifra Creations,It's Excellent Our Team Like The Material.</span></h5>
+                      <h5 class="quote-modern-author">Cyberphoenix,</h5>
+                      <p class="quote-modern-status">Regular Customer</p>
                     </article>
                   </div>
                   <div class="item">
                     <!-- Quote Modern-->
                     <article class="quote-modern">
-                      <h5 class="quote-modern-text"><span class="q">Fluctuss sunt eras de neuter plasmator. Heuretes
-                          noster brabeuta est. Nixus, visus, et mensa. Primus, magnum tatas rare locus de altus,
-                          camerarius clabulare.</span></h5>
-                      <h5 class="quote-modern-author">Will Jones,</h5>
-                      <p class="quote-modern-status">Regular Client</p>
+                      <h5 class="quote-modern-text"><span class="q">Absolutely love the comfort and style of Zifra Creations! The fabric feels amazing, and the designs are so versatile.</span></h5>
+                      <h5 class="quote-modern-author">Maya,</h5>
+                      <p class="quote-modern-status">Regular Customer</p>
                     </article>
                   </div>
                 </div>
@@ -556,8 +545,7 @@
             <div class="col-md-6 col-lg-4">
               <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Zifra Creations</span></h5>
               <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
-                <li><a href="#">Custom Design</a></li>
-                <li><a href="#">Export Quality</a></li>
+<li><a href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey zifra creations, Please share more details about the Customized T-shirts"target="_blank">Custom Design</a></li>                <li><a href="#">Export Quality</a></li>
                 <li><a href="/about-us.html">About Zifra</a></li>
               </ul>
             </div>
@@ -614,7 +602,7 @@
                 <div class="footer-modern-contacts wow slideInUp">
                   <div class="unit unit-spacing-sm align-items-center">
                     <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
-                    <div class="unit-body"><a class="phone" href="tel:+91 7200439935">+91 7200439935</a></div>
+                    <div class="unit-body"><a class="phone" href="tel:+917200439935">+91 7200439935</a></div>
                   </div>
                 </div>
                 <div class="footer-modern-contacts wow slideInDown">
@@ -626,8 +614,12 @@
                 <div class="wow slideInRight">
                   <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                    <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"></a></li>
+                    <li><a class="icon mdi" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-50,-50,350,350">
+                      <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M5.91992,6l14.66211,21.375l-14.35156,16.625h3.17969l12.57617,-14.57812l10,14.57813h12.01367l-15.31836,-22.33008l13.51758,-15.66992h-3.16992l-11.75391,13.61719l-9.3418,-13.61719zM9.7168,8h7.16406l23.32227,34h-7.16406z"></path></g></g>
+                      </svg></a></li>
+                    <li><a class="icon mdi" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"  viewBox="-50,-50,356,356">
+                      <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(9.84615,9.84615)"><path d="M7.54688,0c-4.15625,0 -7.54687,3.39063 -7.54687,7.54688v10.90625c0,4.15625 3.39063,7.54688 7.54688,7.54688h10.90625c4.15625,0 7.54688,-3.39062 7.54688,-7.54687v-10.90625c0,-4.15625 -3.39062,-7.54687 -7.54687,-7.54687zM7.54688,2h10.90625c3.07422,0 5.54688,2.46875 5.54688,5.54688v10.90625c0,3.07422 -2.46875,5.54688 -5.54687,5.54688h-10.90625c-3.07422,0 -5.54687,-2.46875 -5.54687,-5.54687v-10.90625c0,-3.07422 2.46875,-5.54687 5.54688,-5.54687zM20.5,4c-0.82812,0 -1.5,0.67188 -1.5,1.5c0,0.82813 0.67188,1.5 1.5,1.5c0.82813,0 1.5,-0.67187 1.5,-1.5c0,-0.82812 -0.67187,-1.5 -1.5,-1.5zM13,6c-3.85547,0 -7,3.14453 -7,7c0,3.85547 3.14453,7 7,7c3.85547,0 7,-3.14453 7,-7c0,-3.85547 -3.14453,-7 -7,-7zM13,8c2.77344,0 5,2.22656 5,5c0,2.77344 -2.22656,5 -5,5c-2.77344,0 -5,-2.22656 -5,-5c0,-2.77344 2.22656,-5 5,-5z"></path></g></g>
+                      </svg></a></li>
                     
                   </ul>
                 </div>
