--- a/contacts.html
+++ b/contacts.html
@@ -223,7 +223,7 @@
     <section class="bg-gray-7">
       <div class="breadcrumbs-custom box-transform-wrap context-dark">
         <div class="container">
-          <h3 class="breadcrumbs-custom-title">Contacts</h3>
+          <h3 class="breadcrumbs-custom-title">Contact</h3>
           <div class="breadcrumbs-custom-decor"></div>
         </div>
         <div class="box-transform" style="background-image: url(images/clothing.jpg);"></div>
@@ -231,7 +231,7 @@
       <div class="container">
         <ul class="breadcrumbs-custom-path">
           <li><a href="index.html">Home</a></li>
-          <li class="active">Contacts</li>
+          <li class="active">Contact</li>
         </ul>
       </div>
     </section>
