--- a/index.html
+++ b/index.html
@@ -251,6 +251,21 @@
             </div>
           </div>
         </div>
+        <div class="swiper-slide context-dark" data-slide-bg="images/BannerImgs/bannerImg3.png">
+          <div class="swiper-slide-caption section-md">
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-9 col-md-8 col-lg-7 col-xl-7 offset-lg-1 offset-xxl-0">
+                  <h1 class="oh swiper-title"><span class="d-inline-block" data-caption-animate="slideInUp"
+                      data-caption-delay="0">Bulk & Wholesale Orders</span></h1>
+                  <p class="big swiper-text" data-caption-animate="fadeInLeft" data-caption-delay="300">Looking to place a bulk order? Zifra Creations offers premium unisex apparel at competitive wholesale prices. Whether you're a retailer, corporate buyer, or event organizer, we provide high-quality, stylish clothing in large quantities.</p>
+                  <div class="button-wrap oh"><a class="button button-lg button-secondary button-winona button-shadow-2"
+                      href="/contacts.html" data-caption-animate="slideInUp" data-caption-delay="0">For inquiries, contact us today </a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- Swiper Pagination-->
       <div class="swiper-pagination" data-bullet-custom="true"></div>
